src/App.css
.App {
  position: relative;
  width: 100vw;
  height: 100vh;
  background-color: #e5e5ea;
}

.toolbar {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 20px;
  z-index: 1;
}

.action-bar {
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1;
}

.panel {
  position: absolute;
  top: 80px;
  right: 20px;
}

